# curto

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  justfile
.cargo/: audit.toml
.github/workflows/: audit.yml  check.yml  docker.yml
.sqlx/: query-1f110a11d9f73a84c6adc2013a99857600c61f475571c2736e634cf63dc24bd8.json  query-3016951fe29a97921f1bf07b1a119eaf3214929a9bc5273782cfe54c0e4a69dd.json  query-31ee38d0ac30ecdfe00a4b0a5e783322a8ff100a40195ca495f449eef270a358.json  query-6f1a1a1c42a116cf6ed8c76776518a35e1bfd5ba861a47bd28ba2f35846d7c59.json  query-8d9d4d54f70d1f527e64bb300e97801be054b205af1f9ce1f7151e01aae9afbc.json  query-962549bff604ab5f2023e86a4c8f580407e97eeb79f75c4ec021b124aea51c1b.json  query-f84a8cc90c70380dfd22fb7fdec7a25d29b7093e1ad4c0d33a63280b72cc6b21.json
migrations/: 20250507120919_links.up.sql  20250520134010_link_expiration.down.sql  20250520134010_link_expiration.up.sql
src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs  utils.rs
src/database/: links.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: misc.rs  mod.rs
src/routes/api/docs/: mod.rs  scalar.html
src/routes/api/links/: create.rs  get.rs  list.rs  mod.rs  redirect.rs
tests/: quick_dev.rs  routes_docs.rs  routes_links.rs  routes_misc.rs
tests/common/: mod.rs
