[package]
name = "curto"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8.5", features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
], default-features = false }

axum = { version = "0.8", features = ["macros", "form", "tokio"] }
axum-extra = { version = "0.10.1", features = ["form"] }
tower_governor = "0.7"
tower-http = { version = "0.6", features = [
  "timeout",
  "trace",
  "cors",
  "compression-gzip",
  "limit",
  "fs",
] }

axum-prometheus = "0.8"
utoipa = { version = "5.3.1", features = [
  "axum_extras",
  "chrono",
  "url",
  "preserve_order",
] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

strum = "0.27.*"
strum_macros = "0.27.*"

rand = "0.9"
thiserror = "2.0"
config = { version = "0.15", default-features = false, features = ["toml"] }
url = { version = "2.5.4", features = ["serde"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
base64 = "0.22.1"
block-id = "0.2.1"

[dev-dependencies]
axum-test = "17.3"
httpc-test = "0.1"
pretty_assertions = "1.4"
testcontainers-modules = { version = "0.12.0", features = ["postgres"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
